--- a/roles/docker_run/tasks/main.yml
+++ b/roles/docker_run/tasks/main.yml
@@ -46,8 +46,8 @@
 
 - name: Log into DockerHub
   docker_login:
-    username: sofdem
-    password: popkaNasty42
+    username: ****
+    password: ****
   
 - name: Tag and push to docker hub
   docker_image:
@@ -55,23 +55,6 @@
     repository: sofdem/tomcat_app
     push: yes
     source: local
-
-#- name: Create default containers
-#  docker_container:
-#    name: "docker{{ item }}"
-#    image: tomcat_app
-#    state: present
-#    command: sleep 1d
-#    network_mode: bridge
-#    exposed_ports:
-#      - 8081:8080
-#    ports:
-#      - 8081:8080
-#    published_ports:
-#      - 8081:8080
-#    restart: true
-#  with_sequence: count=2
-
 
 - name: create first container
   shell: docker run --name container1 -d -p 8080:8080 tomcat_app  
